# kindle-brain

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/kindle-brain/: SKILL.md
app/KindleBrain/KindleBrain/: KindleBrainApp.swift
app/KindleBrain/KindleBrain.xcodeproj/: project.pbxproj
app/KindleBrain/KindleBrain.xcodeproj/project.xcworkspace/xcuserdata/adolfo.xcuserdatad/: UserInterfaceState.xcuserstate
app/KindleBrain/KindleBrain.xcodeproj/xcuserdata/adolfo.xcuserdatad/xcschemes/: xcschememanagement.plist
app/KindleBrain/KindleBrain/Assets.xcassets/AccentColor.colorset/: Contents.json
app/KindleBrain/KindleBrain/Models/: Models.swift
app/KindleBrain/KindleBrain/Services/: APIService.swift  ChatStore.swift  DataService.swift  GeminiService.swift  ServerManager.swift  XAIService.swift
app/KindleBrain/KindleBrain/ViewModels/: ChatViewModel.swift  LibraryViewModel.swift  MemoryViewModel.swift
app/KindleBrain/KindleBrain/Views/: ChatView.swift  ContentView.swift  LibraryDetailView.swift  MemoryView.swift  OnboardingView.swift  SettingsView.swift
docs/: wisdom_evaluation.md
scripts/: api_server.py  config.py  enrich.py  extract_text.py  generate_md.py  index.py  mcp_server.py  memory.py  search.py  sync.py  update.py
skills/kindle-brain/: SKILL.md
src/kindle_brain/: __init__.py  __main__.py  cli.py  config.py  db.py  enrich.py  extract.py  generate_md.py  index.py  memory.py  paths.py  search.py  sync.py
src/kindle_brain/server/: api_server.py  mcp_server.py
